--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "reactjs-popup": "^2.0.6"
+    "reactjs-popup": "^2.0.6",
+    "select2": "^4.1.0-rc.0"
   }
 }
