--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "js-cookie": "^3.0.5",
     "marked": "^16.0.0",
     "next": "15.3.4",
+    "nodemailer": "^7.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-photo-view": "^1.2.7",
+    "react-toastify": "^11.0.5",
     "reactjs-popup": "^2.0.6",
     "select2": "^4.1.0-rc.0"
   }
