--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "html-react-parser": "^5.2.6",
     "intl-tel-input": "^25.3.2",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
